--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,7 @@
             "Shellby\\Db\\": "src"
         }
     },
-    "require": {}
+    "require": {
+        "vlucas/phpdotenv": "^5.5"
+    }
 }
